public class Partida : Jogo
{
    
}